# DefRegEval

./: CMakeLists.txt  README
data/ShapeModels/ProstateShapeModel/: eigenValues.txt
data/ShapeModels/ProstateShapeModelTrainingData/OriginalShapes/: Shape_001.mha  Shape_002.mha  Shape_003.mha  Shape_004.mha  Shape_005.mha  Shape_006.mha  Shape_007.mha  Shape_008.mha  Shape_009.mha  Shape_010.mha
src/: AddImageSegmentationError.cxx  CMakeLists.txt  ComputeMultiImageStatistics.cxx  ContourStatistics.cxx  ContourStatistics.h  CreateFemModel.cxx  CreateShapeModel.cxx  CubicSplineSolver.cxx  CubicSplineSolver.h  DefRegEval.cxx  DefRegEval.h.in  EvaluateRegistrationError.cxx  ExtraFunctions.cxx  ExtraFunctions.h  ExtractSurface.cxx  GenerateShapeImage.cxx  GetDeformedImage.cxx  Polynomial.cxx  Polynomial.h  ProstateErrorMapRendering.cxx  Random.cxx  Random.h  ReadMe.txt  RegisterImages.cxx  deformImage.tcl  license.txt  start_ForcePerturb3.tcl  start_SegmPerturb2.tcl  todo.txt  vtkFEBioWriter.h  vtkKWProstateErrorMapRenderingWidget.cxx  vtkKWProstateErrorMapRenderingWidget.h  vtkLsDynaBinaryPlotReader.h  vtkMeditMeshReader.h  vtkSMeshWriter.h
src/IO/: vtkFEBioWriter.cxx  vtkFEBioWriter.h  vtkLsDynaBinaryPlotReader.cxx  vtkLsDynaBinaryPlotReader.h  vtkMeditMeshReader.cxx  vtkNetgenMeshReader.cxx  vtkNetgenMeshReader.h  vtkSMeshWriter.cxx
src/tools/febio/: .directory
test/: getstats.tcl  start.tcl  start_ForcePerturb4.tcl  start_ForcePerturb5.tcl  start_SegmPerturb1.tcl
testing/: CMakeLists.txt  deformImage.tcl  deformImage2.tcl  getstats.tcl  start.tcl  start_ForcePerturb3.tcl  start_ForcePerturb4.tcl  start_ForcePerturb5.tcl  start_SegmPerturb1.tcl  start_SegmPerturb2.tcl
tools/: CMakeLists.txt
tools/febio/: CMakelists.txt
tools/febio/FECore/: CMakelists.txt
tools/febio/Release/: README.txt
tools/febio/Release/Examples/: test_suite.bash
tools/tetgen/: CMakelists.txt  tetgen.cxx
